Fixed Log Issues
Added one more row to the top log.

Topbar now shrinks to one line when not used by the log.

Right log no longer goes off the page. Both right and left logs have scrollbars.

--- a/less/style.less
+++ b/less/style.less
@@ -339,10 +339,14 @@ h4 {
     background-color: var(--color-dark);
     margin-left: auto;
     margin-right: auto;
-    margin-top: 58px;
+    margin-top: 2.5em;
     padding: 10px;
     .border-radius(10px);
     height: 100%;
+
+    &.topLogActive {
+        margin-top: 4.8em;
+    }
 }
 
 pre {
@@ -401,7 +405,7 @@ pre {
     #title {
         padding: 0;
         width: 100%;
-        height: 3em;
+        height: 4.3em;
         position: fixed;
         background-image: none;
         font-size: initial;
@@ -417,7 +421,7 @@ pre {
 
         #titlebar {
             width: 100%;
-            pointer-events: all;
+            .click-passthrough;
         }
 
         #gameName,
@@ -463,12 +467,16 @@ pre {
 }
 
 #titlebackground {
-    height: 3em;
+    height: 2em;
     background-color: var(--color-med);
     position: fixed;
     width: 100%;
     z-index: -1;
     box-shadow: 0 4px 4px 4px var(--color-darker);
+
+    &.topLogActive {
+        height: 4.3em;
+    }
 }
 
 #titlebar {
@@ -686,8 +694,9 @@ pre {
         }
 
         &.forRightSide {
+            overflow-y: scroll;
             border-style: none;
-            max-height: 70em;
+            max-height: 42em;
             li {
                 padding-top: 1em;
                 padding-bottom: 1em;
@@ -697,6 +706,7 @@ pre {
         }
 
         &.forLeftSide {
+            overflow-y: scroll;
             border-style: none;
             max-height: 30em;
             li {
